# tysm

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  batch_completions.rs  batch_completions_low_level.rs  chat_completions.rs  embeddings.rs  files.rs
src/: batch.rs  chat_completions.rs  chatgpt.rs  embeddings.rs  files.rs  lib.rs  model_prices.rs  schema.rs  utils.rs
