[package]
name = "tysm"
version = "0.2.6"
edition = "2021"
description = "Typed OpenAI Chat Completions"
license = "MIT"
homepage = "https://github.com/not-pizza/tysm"
repository = "https://github.com/not-pizza/tysm"
readme = "README.md"

[features]
default = ["dotenv"]

[dependencies]
dotenv = { version = "0.15.0", optional = true }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
thiserror = "2.0.9"
tynm = "0.1.10"
lru = "0.12.5"
schemars = { git = "https://github.com/GREsau/schemars.git", version = "1.0.0-alpha.17", features = [
    "preserve_order",
] }
