[package]
name = "tysm"
version = "0.3.0"
edition = "2021"
description = "Typed OpenAI Chat Completions"
license = "MIT"
homepage = "https://github.com/not-pizza/tysm"
repository = "https://github.com/not-pizza/tysm"
readme = "README.md"
keywords = [
    "openai",
    "chatgpt",
    "chat-completions",
    "structured-outputs",
    "schema",
]

[features]
default = ["dotenv"]

[dependencies]
dotenv = { version = "0.15.0", optional = true }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "2.0.9"
tynm = "0.1.10"
lru = "0.12.5"
schemars = { git = "https://github.com/GREsau/schemars.git", version = "1.0.0-alpha.17", features = [
    "preserve_order",
] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
